# datagrunt

./: .gitignore  LICENSE  README.md  pyproject.toml  query_csv.ipynb  requirements.txt
datagrunt/: __init__.py  csvfile.py  csvfiles.py
datagrunt/core/: csvengines.py  databases.py  engines.py  filehelpers.py  fileproperties.py  logger.py  queries.py
examples/: duckdb_read_csv.ipynb  polars_read_csv.ipynb  query_csv.ipynb
libs/: data_processing.py  data_wrangler.py  databases.py  file_utils.py  files.py  http_helpers.py  test.csv  test_csv_file.py
src/datagrunt/: __init__.py  csvfile.py
src/datagrunt/core/: databases.py  engines.py  fileproperties.py  logger.py  queries.py
tests/: run_tests.py  test_csv_column_formatter.py  test_csv_file.py  test_csv_properties.py  test_csv_reader.py  test_csv_reader_duckdb_engine.py  test_csv_reader_polars_engine.py  test_csv_writer.py  test_csv_writer_duckdb_engine.py  test_csv_writer_polars_engine.py  test_csvfile.py  test_duckdb_database.py  test_file_properties.py  test_logger.py
