[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagrunt"
version = "0.1.0"
description = "Read CSV files and convert to other file formats easily"
readme = "README.md"
authors = [{ name = "Martin Graham", email = "datagrunt@datagrunt.io" }]
dependencies = [
    "duckdb",
    "polars",
    "pyarrow",
    "XlsxWriter"
]
keywords = ["csv", "data", "duckdb", "polars", "pyarrow", "xlsx", "delimiter"]
 
 [project.optional-dependencies]
    build = ["build", "twine", "bumpver"]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "datagrunt/__init__.py" = [
        '^__version__ = "{version}"$',
]
