[build-system]
requires      = ["setuptools>=74.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagrunt"
version = "1.0.1"
description = "Read CSV files and convert to other file formats easily"
readme = "README.md"
authors = [{ name = "Martin Graham", email = "datagrunt@datagrunt.io" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["csv", "data", "duckdb", "polars", "pyarrow", "xlsx", "delimiter"]
dependencies = [
    "duckdb",
    "polars",
    "pyarrow",
    "XlsxWriter"
]
 
 [project.optional-dependencies]
    build = ["build", "twine", "bumpver"]

[tool.bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "datagrunt/__init__.py" = [
        '^__version__ = "{version}"$',
]
