[build-system]
requires = ["setuptools>=74.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagrunt"
version = "0.0.1"
description = "Read CSV files and convert to other file formats easily"
readme = "README.md"
authors = [{ name = "Martin Graham", email = "datagrunt@datagrunt.io" }]
license = {text = "MIT License"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["csv", "data", "duckdb", "polars", "pyarrow", "xlsx", "delimiter"]
dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.7.1",
    "pyarrow>=17.0.0",
    "XlsxWriter>=3.2.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=3.0", "black", "isort", "flake8"]
build = ["build", "twine", "bumpver"]

[project.urls]
Homepage = "https://pmgraham.github.io/datagrunt-docs"
"Bug Tracker" = "https://github.com/pmgraham/datagrunt/issues"
Documentation = "https://pmgraham.github.io/datagrunt-docs"
"Source Code" = "https://github.com/pmgraham/datagrunt"

[tool.setuptools.packages.find]
where = ["src"]
include = ["datagrunt*"]
exclude = ["tests*"]

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/datagrunt/__init__.py" = [
    '^__version__ = "{version}"$',
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"